standards/gnds-2.0/try/c/src/v2.0/fissionTransport/NeutrinoEnergy.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ comment
// Constructs you're LESS likely to care about are preceded with:
//    // --- comment
// Anything not marked as above can be ignored by most users.
//
// NeutrinoEnergy is the basic handle type in this file. Example:
//    // Create a default NeutrinoEnergy object:
//    NeutrinoEnergy handle = NeutrinoEnergyDefault();
// Functions involving NeutrinoEnergy are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TRY_V2_0_FISSIONTRANSPORT_NEUTRINOENERGY
#define C_INTERFACE_TRY_V2_0_FISSIONTRANSPORT_NEUTRINOENERGY

#include "GNDStk.h"
#include "v2.0/containers/Polynomial1d.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct NeutrinoEnergyClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ NeutrinoEnergy
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct NeutrinoEnergyClass *NeutrinoEnergy;

// --- Const-aware handles.
typedef const struct NeutrinoEnergyClass *const ConstHandle2ConstNeutrinoEnergy;
typedef       struct NeutrinoEnergyClass *const ConstHandle2NeutrinoEnergy;
typedef const struct NeutrinoEnergyClass *      Handle2ConstNeutrinoEnergy;
typedef       struct NeutrinoEnergyClass *      Handle2NeutrinoEnergy;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstNeutrinoEnergy
NeutrinoEnergyDefaultConst();

// +++ Create, default
extern_c Handle2NeutrinoEnergy
NeutrinoEnergyDefault();

// --- Create, general, const
extern_c Handle2ConstNeutrinoEnergy
NeutrinoEnergyCreateConst(
   ConstHandle2ConstPolynomial1d polynomial1d
);

// +++ Create, general
extern_c Handle2NeutrinoEnergy
NeutrinoEnergyCreate(
   ConstHandle2ConstPolynomial1d polynomial1d
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
NeutrinoEnergyAssign(ConstHandle2NeutrinoEnergy This, ConstHandle2ConstNeutrinoEnergy from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
NeutrinoEnergyDelete(ConstHandle2ConstNeutrinoEnergy This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
NeutrinoEnergyRead(ConstHandle2NeutrinoEnergy This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
NeutrinoEnergyWrite(ConstHandle2ConstNeutrinoEnergy This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
NeutrinoEnergyPrint(ConstHandle2ConstNeutrinoEnergy This);

// +++ Print to standard output, as XML
extern_c int
NeutrinoEnergyPrintXML(ConstHandle2ConstNeutrinoEnergy This);

// +++ Print to standard output, as JSON
extern_c int
NeutrinoEnergyPrintJSON(ConstHandle2ConstNeutrinoEnergy This);


// -----------------------------------------------------------------------------
// Child: polynomial1d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
NeutrinoEnergyPolynomial1dHas(ConstHandle2ConstNeutrinoEnergy This);

// --- Get, const
extern_c Handle2ConstPolynomial1d
NeutrinoEnergyPolynomial1dGetConst(ConstHandle2ConstNeutrinoEnergy This);

// +++ Get, non-const
extern_c Handle2Polynomial1d
NeutrinoEnergyPolynomial1dGet(ConstHandle2NeutrinoEnergy This);

// +++ Set
extern_c void
NeutrinoEnergyPolynomial1dSet(ConstHandle2NeutrinoEnergy This, ConstHandle2ConstPolynomial1d polynomial1d);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif